2011-02-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Added connect_db function
	from update_manager db library to pandora_db

	* extensions/update_manager/sql/update_manager.sql: Changed
	the open update manager server path from 32 to 321

	* extensions/update_manager/lib/db
	extensions/update_manager/lib/db/functions_db.mysql.php: 
	Deleted db library to use the pandora functions_db

2011-02-22  Sergio Martin <sergio.martin@artica.es>

	* install.php: Removed the PEAR dependences
	checking in install

2011-02-22  Sancho Lerena <slerena@artica.es>

	* install.php: Installer version update (3.2.1)

2011-02-22  Sergio Martin <sergio.martin@artica.es>

	* extensions/update_manager.php
	extensions/update_manager/load_updatemanager.php
	extensions/update_manager/lib/load_updatemanager.php
	extensions/update_manager/lib/db
	extensions/update_manager/lib/db/functions_db.mysql.php
	extensions/update_manager/lib/xmlrpc
	extensions/update_manager/lib/xmlrpc/xmlrpcs.inc
	extensions/update_manager/lib/xmlrpc/xmlrpc_wrappers.inc
	extensions/update_manager/lib/xmlrpc/xmlrpc.inc
	extensions/update_manager/lib/libupdate_manager_client.php
	extensions/update_manager/lib/libupdate_manager.php
	extensions/update_manager/lib/libupdate_manager_utils.php
	extensions/update_manager/lib/libupdate_manager_components.php
	extensions/update_manager/lib/libupdate_manager_updates.php
	extensions/update_manager/settings.php
	extensions/update_manager/main.php: Upgraded open update manager 
	client to 2.0 version deleting PEAR dependences and adding offline
	packages loader.

2011-02-22  Sergio Martin <sergio.martin@artica.es>

	* include/languages/cs.po
	include/languages/et.mo
	include/languages/pt_BR.po
	include/languages/nl.mo
	include/languages/es.po
	include/languages/pl.mo
	include/languages/ko.po
	include/languages/it.mo
	include/languages/sl.mo
	include/languages/sk.po
	include/languages/uk.po
	include/languages/pt.mo
	include/languages/ro.po