@@ -1,5 +1,5 @@
 package: PandoraFMS-Console
-Version: 3.2
+Version: 3.2.1
 Architecture: all
 Priority: optional
 Section: admin
